# vulkano_particles

./: Cargo.toml
shaders/: particle_cull.comp.glsl  particle_physics.comp.glsl  particles.vert.glsl
src/: main.rs
src/particle_application/: mod.rs  shaders.rs
