[package]
name = "particles"
version = "0.1.0"
authors = ["Michael Noser <michael@noser.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.18"
vulkano-shaders = "0.18"
vulkano-win = "0.18"
image = "0.23"
winit = "0.22"
rand = "0.7"