[package]
name = "particles"
version = "0.1.0"
authors = ["Michael Noser <michael@noser.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.23"
vulkano-shaders = "0.23"
vulkano-win = "0.23"
winit = "0.24"
rand = "0.8.5"
rayon = "1.8.1"
log = "0.4.20"